enable preview for run as well