@@ -5,10 +5,13 @@ plugins {
 group 'be.selske.aoc'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 13
+sourceCompatibility = JavaVersion.VERSION_13
 
 tasks.withType(JavaCompile).each {
     it.options.compilerArgs.add('--enable-preview')
+}
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
 }
 
 repositories {
